--- a/index.html
+++ b/index.html
@@ -6,6 +6,62 @@
     <title>Awesome Website</title>
 </head>
 <body>
-    
+    <header>
+        <a href="./index.html">Header Logo</a>
+        <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </header>
+    <div class="top-sign-up-container">
+        <div class="top-sign-up-text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign up</button>
+        </div>
+        <div class="top-sign-up-image">
+            this is a placeholder for an image
+        </div>
+    </div>
+    <div class="random-info">
+        <h2>Some random information</h2>
+        <ul class="info-container">
+            <li>
+                <div class="info-image"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </li>
+            <li>
+                <div class="info-image"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </li>
+            <li>
+                <div class="info-image"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </li>
+            <li>
+                <div class="info-image"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </li>
+        </ul>
+    </div>
+    <div class="quote-container">
+        <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quote-author">
+            - Thor, God of Thunder
+        </div>
+    </div>
+    <div class="bottom-sign-up-container">
+        <div class="bottom-sign-up-text">
+            <h3>Call to action! It's time</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <footer>
+        Copyright © The Odin Project 2021
+    </footer>
 </body>
 </html>
