--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Awesome Website</title>
 </head>
 <body>
     <header>
-        <a href="./index.html">Header Logo</a>
-        <ul>
+        <a class="header-logo" href="./index.html">Header Logo</a>
+        <ul class="header-links">
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
     </header>
-    <div class="top-sign-up-container">
-        <div class="top-sign-up-text">
+    <div class="hero-container">
+        <div class="hero-text">
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign up</button>
         </div>
-        <div class="top-sign-up-image">
+        <div class="hero-image">
             this is a placeholder for an image
         </div>
     </div>
@@ -53,9 +54,9 @@
             - Thor, God of Thunder
         </div>
     </div>
-    <div class="bottom-sign-up-container">
-        <div class="bottom-sign-up-text">
-            <h3>Call to action! It's time</h3>
+    <div class="sign-up-container">
+        <div class="sign-up-text">
+            <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign up</button>
